# my-projector

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
dev-ledger/: 2026-07-07.jsonl  2026-07-12.jsonl
src/myprojector/: __init__.py  board.py  cli.py  projector.py  sources.py
tests/: conftest.py  test_cli.py  test_projector.py  test_sources.py
